--- a/src/schema-registry/view/view.html
+++ b/src/schema-registry/view/view.html
@@ -71,7 +71,7 @@
     <div class="buttonGroup" ng-hide="hideEdit" ng-if="aceReady && !showDeleteConfirmation"  >
 
         <!-- When in non-editable state, display the EDIT button -->
-        <md-button ng-show="!isAvroAceEditable" ng-click="toggleEditor();" ng-if="!readonlyMode"
+        <md-button ng-show="!isAvroAceEditable" ng-click="toggleEditor();" ng-if="!readonlyMode && editAuthorized"
            aria-label="EDIT"
            aria-hidden="false">
           <i class="fa fa-pencil-square-o ng-scope" aria-hidden="true"></i>
@@ -84,7 +84,7 @@
           <i class="fa fa-ban ng-scope" aria-hidden="true"></i>
             CANCEL
         </md-button>
-        <md-menu d-position-mode="target-right target" ng-if="!isAvroAceEditable && allowSchemaDeletion && !readonlyMode">
+        <md-menu d-position-mode="target-right target" ng-if="!isAvroAceEditable && allowSchemaDeletion && !readonlyMode && !deleteAuthorized">
           <md-button ng-click="$mdOpenMenu($event)">
               <i class="fa fa-trash" aria-hidden="true"></i>
             DELETE
@@ -269,7 +269,7 @@
           </md-content>
         </md-tab-body>
       </md-tab>
-      <md-tab md-on-select="hideEdit = true;" ng-if="!readonlyMode">
+      <md-tab md-on-select="hideEdit = true;" ng-if="!readonlyMode && writeCompatibilityAuthorized">
         <md-tab-label>
           Config
           <!--<i class="fa fa-file-text-o" style="padding-right:10px;" aria-hidden="true"></i> Schema-->
